# harness-framework-testsuite

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  entrypoint.sh  hello.py  pyproject.toml  requirements.txt
config/: default.yaml  opencode.json  opencode.json.bak
data/repobench/: sample.json
data/swebench-lite/: sample.json  swebench-lite.jsonl
scripts/: collect_metrics.py  config.py  download_datasets.py  metrics.py  paper_analysis.py  run_test.py
scripts/dataset/: base.py  repobench.py  swebench_lite.py
scripts/evaluators/: __init__.py  base.py  sandbox.py  self_report.py
scripts/harness/: base.py  opencode.py  pi.py
