[project]
name = "harness-framework-testsuite"
version = "0.1.0"
description = "Test suite for harness frameworks (OpenCode, Pi) on SWE-Bench Lite and RepoBench"
requires-python = ">=3.11"
dependencies = [
    "click>=8.4.1",
    "docker>=6.1.0",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "requests>=2.34.2",
    "rich>=15.0.0",
    "tqdm>=4.67.3",
]

[project.optional-dependencies]
download = [
    "datasets>=4.8.5",
]
paper = [
    "matplotlib>=3.10.9",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
]
